# netmoniter

./: DEVELOPER.md  LICENSE  README.md  build.py  debug.py  file_version_info.txt  install.py  pyproject.toml  requirements-build.txt  requirements.txt  run_app.py  run_networkmonitor.bat  setup.py  start_networkmonitor.py
.github/: CODEOWNERS  CODEOWNERS.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  version.yml
assets/: icon.icns
networkmonitor/: __init__.py  cli.py  dependency_check.py  launcher.py  monitor.py  npcap_helper.py  server.py  splash.py
networkmonitor/web/: .vercelignore  vercel.json
networkmonitor/web/components/: DependencyWarning.js
tests/: conftest.py  test_dependency_check.py
