[build-system]
requires = ["setuptools>=69.0.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "networkmonitor"
version = "0.1.0"
description = "Network monitoring and analysis tool"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "click>=8.0.0",
    "scapy>=2.5.0",
    "psutil>=5.9.0",
    "requests>=2.0.0",
    "ifaddr>=0.1.0",
    "pywin32>=300; platform_system=='Windows'",
    "wmi>=1.5.1; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pylint"
]

[tool.setuptools]
packages = ["networkmonitor"]

[project.scripts]
networkmonitor = "networkmonitor.cli:main"